--- a/medium1.html
+++ b/medium1.html
@@ -8,6 +8,7 @@
             padding: 0;
             margin: 0;
             box-sizing: border-box;
+            font-family: Arial, Helvetica, sans-serif;
         }
 
         table {
@@ -24,6 +25,7 @@
         td {
             /* width: 10rem; */
             padding: 0.1rem;
+            font-size: 10px;
             border: 1px solid #383838;
         }
         td.isHead {
